syntax = "proto3";

package com.soobin.user.grpc;

option java_multiple_files = true;
option java_package = "com.soobin.user.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
}
